# gitx

./: .gitignore  README.md  config.json  next.config.ts  package.json  pnpm-lock.yaml
src/app/: layout.tsx  page.tsx
src/app/api/prs/: route.ts
src/app/api/stats/: route.ts
src/app/repo/[owner]/[name]/: page.tsx
src/components/: add-repo.tsx  date-range-picker.tsx  repo-card.tsx
src/hooks/: use-repos.ts  use-stats.ts
src/lib/: config.ts  github.ts
src/modules/gitx/: BUILD.bazel
src/modules/gitx/src/: GitXApp.tsx
src/modules/gitx/src/components/: CommitListItem.tsx  ContributionGrid.tsx  DayCell.tsx  EmptyState.tsx  MonthLabel.tsx  ProfileHeader.tsx  RepoListItem.tsx  SectionHeader.tsx  StatsCard.tsx
src/modules/gitx/src/models/: AppState.ts  Commit.ts  Contribution.ts  Repository.ts  UserProfile.ts
src/modules/gitx/src/screens/: HomeScreen.tsx  OnboardingScreen.tsx  RepoDetailScreen.tsx  SettingsScreen.tsx
src/modules/gitx/src/services/: AuthService.ts  ContributionService.ts  GitHubService.ts  UserService.ts
src/modules/gitx/src/utils/: ColorUtils.ts  DateUtils.ts  Styles.ts
