load("@valdi//bzl:valdi.bzl", "valdi_module")

valdi_module(
    name = "gitx",
    srcs = glob(["src/**/*.ts", "src/**/*.tsx"]),
    deps = [
        "@valdi//src/valdi_modules/src/valdi/valdi_http",
        "@valdi//src/valdi_modules/src/valdi/persistence",
        "@valdi//src/valdi_modules/src/valdi/valdi_navigation",
    ],
    visibility = ["//visibility:public"],
)
